Fix Line Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ em, i {
     text-align: center;
 }
 
-h3, h4, h5, h6 {
+.post h3, h4, h5, h6 {
     margin-top: 20px;
     margin-bottom: 20px;
 }
